vlib/v/checker/tests/globals/global_receiver_var_name_err.vv
module main

struct Game {
mut:
	world     GameObject
	object_id u32
}

__global (
	game Game
)

struct GameObject {
	id u32 = game.object_id++
}

fn (mut game Game) init() {
	game.world = GameObject{}
}

fn main() {}
